app/assets/stylesheets/application.css
/* 
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

 * {
   /* background-color: rgb(234, 241, 234); */
   text-align: center;
   font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
 }

 #container {
  background-color: rgba(237, 241, 232, 0.925);
 }

/* .post {
  border-style: solid;
  border: 1px, rgb(69, 82, 94);
  max-width: 40%;
  margin: 20px;
  margin-left: auto;
  margin-right: auto;

} */

/* .button {
  background-color: rgb(231, 238, 233);
} */

form {
  display: inline;
  /* background-color: snow; */
}

.message {
  /* background-color: rgba(102, 101, 101, 0.441); */
  padding-top: 10px;
  padding-bottom: 10px;
  margin-top: 0px;
}

.messagePRE{overflow: scroll;}

input {
  margin-bottom: 10px;
}

header, h1 {
  padding: 2px;
  max-width: 40%;
  margin-left: auto;
  margin-right: auto;
}

.post_message {
  white-space: pre-wrap;
}

